force-app/main/default/objects/Income_Calculators__c/Income_Calculators__c.object-meta.xml
<CustomObject>
    <label>Income Calculator</label>
    <nameField>
        <displayFormat>ICN-{000000}</displayFormat>
        <label>Income Calculator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Calculators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>