force-app/main/default/objects/Income_Calculators__c/fields/Annualized_Income__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Income__c</fullName>
    <label>Annualized Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>