force-app/main/default/objects/Income_Calculators__c/fields/Number_of_Pays__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pays__c</fullName>
    <label>Number of Pays</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>