force-app/main/default/objects/Income_Calculators__c/fields/YTD__c.field-meta.xml
<CustomField>
    <fullName>YTD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YTD</label>
    <type>Checkbox</type>
</CustomField>